{
    "name": "Player_Controls",
    "maps": [
        {
            "name": "Movement",
            "id": "8eecb865-2a3d-42ab-a7eb-fae086dcc7e0",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Value",
                    "id": "92a77553-c810-4ca4-9765-240ac34c0933",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "413c6710-6b97-492a-9a02-9f5c1b0a2d56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "57d9c8c3-dae3-4e28-86dd-53574837e0b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "9cac62c6-e20e-460d-86b6-86e315b36c43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "708feeff-e93c-4a5c-a996-0f2661512503",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "97143bdd-7079-4302-861f-8a81017a8a86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "469b1e00-50b8-4b00-992f-9f6d920bfc9b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54b5fdcd-ba0f-4999-b260-4952372c4846",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6985b01d-a556-434c-955d-39affe3f6ed1",
                    "path": "<SwitchProControllerHID>/leftStick/left",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6201d8a-8d5d-4ec2-a58d-b28d7ad36edc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa755ec1-dd46-4b41-bd31-f98816ade477",
                    "path": "<SwitchProControllerHID>/leftStick/right",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0eb8464f-2977-494a-8db0-0561bb9295bb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "859ce602-f41e-421c-8bda-5ec4075645e0",
                    "path": "<Keyboard>/space",
                    "interactions": "Press,Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8c2c0fd-79c7-498f-9a11-f4a4c74939df",
                    "path": "<SwitchProControllerHID>/buttonNorth",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9eda921-ec1c-4380-bc54-c00b90689f8f",
                    "path": "<SwitchProControllerHID>/leftStick/down",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c0daa7a-446b-4d58-94a1-c36b629ed5cd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "334f3e61-4201-4a00-8d7e-145693c33d67",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2764be56-7ce6-4407-a321-fb14a8aeb5a7",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97782fb4-b0c9-4964-8946-6ced30102f1c",
                    "path": "<SwitchProControllerHID>/buttonEast",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c19f3fd0-7559-45e5-b7ce-f7cdba4bb426",
                    "path": "<SwitchProControllerHID>/leftStick/up",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f550b95-5da8-4820-9c6e-e2d3f62e4121",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "613898ca-f396-4685-9a29-c75a0b374bb5",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Attacking",
            "id": "4e93167f-61ec-4d9c-b9d2-6cd3efb7769c",
            "actions": [
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "85dd7e52-6a7d-40dc-ac0c-483c80a7ebf7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1042a7b6-7e32-4bb7-baa8-b14aa5e49c85",
                    "path": "<SwitchProControllerHID>/buttonWest",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ade99bc8-e72d-4af8-bb65-76d3c8305866",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}